force-app/main/default/objects/Scheme_Product_Group__c/Scheme_Product_Group__c.object-meta.xml
<CustomObject>
    <label>Scheme Product Group</label>
    <nameField>
        <label>Scheme_Product_Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheme Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>