force-app/main/default/objects/Scheme_Product_Group__c/fields/Group_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Group_Purpose__c</fullName>
    <label>Group Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Purpose</valueSetName>
    </valueSet>
</CustomField>