force-app/main/default/objects/Scheme_Product_Group__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <label>Member Count</label>
    <summaryForeignKey>Scheme_Product_Group_Item__c.Scheme_Product_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>